<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_navigation_chat"
        android:enabled="true"
        android:icon="@drawable/navigation_chat"
        android:title="@string/navigation_chat" />

    <item
        android:id="@+id/bottom_navigation_contacts"
        android:enabled="true"
        android:icon="@drawable/navigation_contacts"
        android:title="@string/navigation_contacts" />

    <item
        android:id="@+id/bottom_navigation_map"
        android:enabled="true"
        android:icon="@drawable/navigation_map"
        android:title="@string/navigation_map" />

    <item
        android:id="@+id/bottom_navigation_share"
        android:enabled="true"
        android:icon="@drawable/navigation_share"
        android:title="@string/navigation_share" />
</menu>