<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp">

        <TextView
            android:text="@string/settings_change_device_migrate_to_another_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:textStyle="bold"
            android:text="@string/settings_change_device_help_old_salt" />

        <TextView
            android:id="@+id/dialog_uniqueid_old_salt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:textIsSelectable="true"/>

        <TextView
            android:text="@string/settings_change_device_migrate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginRight="4dp"
            android:textStyle="bold"
            />

        <TextView
            android:text="@string/settings_change_device_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/settings_change_device_hint_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_uniqueid_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/settings_change_device_old_salt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/settings_change_device_hint_salt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_uniqueid_salt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
