<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fragment_share_allow_bluetooth_card"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="gone"
                app:cardBackgroundColor="?attr/colorTertiaryContainer">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:layout_toStartOf="@id/fragment_share_allow_bluetooth"
                        android:text="@string/bluetooth_denied"
                        android:textColor="?attr/colorOnTertiaryContainer" />

                    <Button
                        android:id="@+id/fragment_share_allow_bluetooth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/allow"
                        android:textColor="?attr/colorOnTertiary"
                        app:backgroundTint="?attr/colorTertiary" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fragment_share_enable_bluetooth_card"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="gone"
                app:cardBackgroundColor="?attr/colorTertiaryContainer">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:layout_toStartOf="@id/fragment_share_enable_bluetooth"
                        android:text="@string/bluetooth_disabled"
                        android:textColor="?attr/colorOnTertiaryContainer" />

                    <Button
                        android:id="@+id/fragment_share_enable_bluetooth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/enable"
                        android:textColor="?attr/colorOnTertiary"
                        app:backgroundTint="?attr/colorTertiary" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/fragment_share_paired_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/paired_devices" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_share_recyclerview_paired"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_share_available_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/TextAppearance.Material3.BodySmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/available_devices" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_share_recyclerview_available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fragment_share_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:text="@string/search"
        android:visibility="gone"
        app:icon="@drawable/action_search" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>